--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -83,3 +83,19 @@
     top: 50px;
 }
 
+
+@media only screen and (max-width: 800px){
+	#image-form{
+		width: 100%;
+	}
+
+	#upload{
+		position: relative;
+		top : 20px;
+		left: -40px;
+	}
+
+	#submit-btn{
+		top : 70px;
+	}
+}
