--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
 			
 				<form action="/client/image" method="POST" enctype="multipart/form-data" style="width: 80%;display: flex;position: relative;top: -50px;" id="image-form">
 					<label for="Image"><span>Upload Image</span><input type="file" name= "file" style="display: inline-block;margin-top: 2%" required id="file"></label>
-					<input type="submit" id="upload" value="UPLOAD-IMAGE" ></input>
+					<input type="submit" id="upload" value="UPLOAD" ></input>
 					
 				</form>
 		
